[gd_scene load_steps=2 format=3 uid="uid://c1t7ijwj3fbh"]

[ext_resource type="Script" path="res://Scenes/CategoriesWindow/categories_window.gd" id="1_8r8gd"]

[node name="CategoriesWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8r8gd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 88.0
offset_right = 336.0
offset_bottom = 224.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Warehouse" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Warehouse"

[node name="Sales" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sales"

[node name="Charges" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Charges"

[node name="ExpenseItems" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Expense items"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Warehouse" to="." method="_on_warehouse_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Sales" to="." method="_on_sales_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Charges" to="." method="_on_charges_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ExpenseItems" to="." method="_on_expense_items_button_up"]
